sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:4: error: not found: value enOrdre1
  while (enOrdre1 || enOrdre2){
         ^AlgCocktailSort1:4: error: not found: value enOrdre2
  while (enOrdre1 || enOrdre2){
                     ^AlgCocktailSort1:13: error: not found: value i
    if (plusPetit(i+1,i)){
                  ^AlgCocktailSort1:13: error: not found: value i
    if (plusPetit(i+1,i)){
                      ^AlgCocktailSort1:14: error: not found: value i
    	echange(i+1,i)
                ^AlgCocktailSort1:14: error: not found: value i
    	echange(i+1,i)
                    ^